--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -56,8 +56,7 @@ main {
 	opacity: 0;
 	pointer-events: none;
 	z-index: 9999;
-	top: 50%;
-	transform: translateY(-50%);
+	bottom: 10%;
 	background: red;
 	width: 100%;
 	height: 1px;
