--- a/assets/scss/component/_footer.scss
+++ b/assets/scss/component/_footer.scss
@@ -1,5 +1,27 @@
 footer {
 
+	#scrollUp {
+		content: '';
+		position: fixed;
+		bottom: 20px;
+		right: 20px;
+		width: 0;
+		height: 0;
+		border: 20px solid transparent;
+		border-bottom: 20px solid $darkblue;
+		cursor: pointer;
+		opacity: 0;
+		pointer-events: none;
+		visibility: hidden;
+		transition: .5s ease;
+
+		&.is__active {
+			opacity: 1;
+			pointer-events: all;
+			visibility: visible;
+		}
+	}
+
 	.inner {
 		background: rgba(#93d4ff, 0.2);
 
@@ -71,9 +93,28 @@ footer {
 					font: 500 12px $fontFamily;
 					color: $white;
 					text-transform: uppercase;
+
+					a {
+						text-decoration: none;
+						color: lightblue;
+						font-weight: bold;
+					}
 				}
 			}
 		}
+	}
+}
 
+@media screen and (max-width: 768px) {
+	footer {
+		.inner {
+			.copyright {
+				.inner {
+					small {
+						font-size: 10px;
+					}
+				}
+			}
+		}
 	}
 }
