--- a/assets/scss/component/_header.scss
+++ b/assets/scss/component/_header.scss
@@ -18,19 +18,14 @@ header {
 			user-select: none;
 
 			figure {
-				width: 40px;
+				max-width: 250px;
 
 				img {
 					width: 100%;
 					height: auto;
+					max-height: 70px;
+					filter: invert(100%);
 				}
-			}
-
-			span {
-				width: calc(100% - 50px);
-				margin-left: 10px;
-				font: 500 15px $fontFamily;
-				color: $white;
 			}
 		}
 
@@ -180,12 +175,13 @@ header {
 			.logo {
 
 				figure {
-					width: 30px;
+					width: 90px;
+
+					img {
+						max-height: 50px;
+					}
 				}
 
-				span {
-					font-size: 11px;
-				}
 			}
 			.list {
 				&.link {
